# HealthCare

./: .gitignore  Genai.py  Jake.py  README.md  data_ov copy.py  data_ov.py  jk.py  pyproject.toml  report_generator.py  requirements.txt  requirements_stable.txt  runtime.txt  test.py  testjk  testjk.py
.devcontainer/: devcontainer.json
.streamlit/: config.toml
AI_H/: README.md  app.py
AI_H/data/: cleaned_blood_data.csv
AI_H/models/: logistic_regression_pipeline.pkl
Healthenv/: pyvenv.cfg
Healthenv/Scripts/: activate  activate.bat
app/: AI_Healthcare_Advisor.py  AI_Healthcare_Advisor_8501.py  Jake.py  JakeAI_new_8505.py  Jake_ai_8502.py  Manual.py  main.py  st.py  st_8503.py  train_model.py  trial.py  trial_1.py
data/: LUTH_Hospital_Enhanced_Dataset.csv  cleaned_blood_data.csv  synthetic_patient_dataset.csv
fonts/: DejaVuSans.pkl
models/: logistic_regression_pipeline.pkl  logistic_regression_pipeline_o.pkl
modules/: loaders.py  ui_tabs.py  utils.py
notebooks/: 01_data_overview.ipynb  03_pipelines.ipynb  04_personalized_recommendation_system.ipynb  data_overview.ipynb  personalized_recommendation_system.ipynb  pipelines.ipynb  preprocessing_and_features.ipynb  testing_data_ov.ipynb
