[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "personalized-healthcare-recommendations"
version = "0.1.0"
description = "A machine learning project for personalized healthcare using feature analysis and data analytics."
authors = [
    { name="Jayanth", email="Jayanthchennoju@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
"anyio==4.9.0",
"asttokens==3.0.0",
"attrs==25.3.0",
"babel==2.17.0",
"beautifulsoup4==4.13.4",
"bleach==6.2.0",
"certifi==2025.4.26",
"cffi==1.17.1",
"charset-normalizer==3.4.2",
"cloudpickle==3.1.1",
"colorama==0.4.6",
"comm==0.2.2",
"contourpy==1.3.2",
"cycler==0.12.1",
"debugpy==1.8.14",
"decorator==5.2.1",
"defusedxml==0.7.1",
"exceptiongroup==1.2.2",
"executing==2.2.0",
"fastjsonschema==2.21.1",
"fonttools==4.57.0",
"fqdn==1.5.1",
"h11==0.16.0",
"httpx==0.28.1",
"idna==3.4",
"ipykernel==6.29.5",
"ipython==8.36.0",
"jedi==0.19.2",
"Jinja2==3.1.6",
"joblib==1.5.0",
"jsonschema==4.23.0",
"jupyter-client==8.6.3",
"jupyter-core==5.7.2",
"kiwisolver==1.4.8",
"llvmlite==0.44.0",
"MarkupSafe==3.0.2",
"matplotlib==3.8.4",
"matplotlib-inline==0.1.7",
"mistune==3.1.3",
"nbformat==5.10.4",
"nest-asyncio==1.6.0",
"numba==0.61.2",
"numpy==1.26.4",
"openai==1.82.0",
"packaging==24.2",
"pandas==2.2.3",
"parso==0.8.4",
"Pillow==11.2.1",
"platformdirs==4.3.8",
"plotly==6.1.0",
"prompt_toolkit==3.0.51",
"psutil==7.0.0",
"pure_eval==0.2.3",
"Pygments==2.19.1",
"pyparsing==3.2.3",
"python-dateutil==2.9.0.post0",
"pytz==2025.2",
"PyYAML==6.0.2",
"pyzmq==26.4.0",
"referencing==0.36.2",
"requests==2.32.3",
"rsa==4.9.1",
"scikit-learn==1.4.2",
"scipy==1.15.3",
"seaborn==0.13.2",
"shap==0.41.0",
"six==1.17.0",
"sniffio==1.3.1",
"stack-data==0.6.3",
"threadpoolctl==3.6.0",
"tornado==6.4.2",
"tqdm==4.67.1",
"traitlets==5.14.3",
"typing-extensions==4.13.2",
"tzdata==2025.2",
"urllib3==2.4.0",
"wcwidth==0.2.13",
"xgboost==2.0.3"
]
