[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.11,<3.14"
name = "personalized-healthcare-recommendations"
version = "0.1.0"
description = "A machine learning project for personalized healthcare using feature analysis, explainability, and data analytics."
authors = [
    { name = "Jayanth", email = "Jayanthchennoju@gmail.com" }
]
license = { text = "MIT" }
readme = "README.md"

dependencies = [
    "streamlit==1.33.0",
    "pandas==2.2.3",
    "numpy==1.26.4",
    "scikit-learn==1.3.2",
    "joblib==1.5.0",
    "plotly==6.1.0",
    "matplotlib==3.8.4",
    "seaborn==0.13.2",
    "google-generativeai==0.6.0",
    "shap==0.41.0",
    "PyPDF2==3.0.1",
    "python-docx==1.1.0",
    "fpdf2==2.8.3",
    "python-dotenv==1.0.1",
    "Babel==2.14.0",
    "scipy==1.15.3",
    "numba==0.61.2",
    "llvmlite==0.44.0"
]